# 2048-Solver

./: .gitmodules  CMakeLists.txt  README.md  launch.sh
.github/workflows/: cmake-multi-platform.yml
benchmarks/: benchmark.cpp
include/: Consts.hpp  Expectimax.hpp  Game.hpp  GameWindow.hpp  MCTS.hpp  MonteCarlo.hpp  ThreadPool.hpp
src/: Expectimax.cpp  Game.cpp  GameWindow.cpp  MonteCarlo.cpp  bindings.cpp  main.cpp
tests/: tests.cpp
